# sugoi

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  flake.nix  package-lock.json  package.json  sugoi.service  tailwind.config.js
.cargo/: config.toml
assets/: main.css  tailwind.css  toast.js
nix/: module.nix
src/: api.rs  db.rs  handlers.rs  main.rs  models.rs  status.rs  templates.rs
templates/: footer.html  header.html  root.html  status-tbody.html  status.html
templates/fragments/: toast.html
templates/status/: pagination.html  partial.html  table.html
