[package]
name = "sugoi"
version = "0.1.1"
authors = [ "frahz <me@frahz.dev>" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
axum = "0.7"
jiff = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
low = { git = "https://github.com/frahz/low.git" }
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }

[profile.release]
strip = "symbols"
