[package]
name = "sugoi"
version = "0.5.1"
authors = [ "frahz <me@frahz.dev>" ]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14"
axum = { version = "0.8", features = ["json"] }
jiff = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
low = { git = "https://github.com/frahz/low.git", tag = "0.3.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["compression-full", "fs"] }
async-sqlite = "0.5"
rusqlite = "0.35"
git-version = "0.3"

[profile.release]
strip = "symbols"
